# agentic-observability

./: .gitignore  LICENSE  README.md  Windows-Execution-Policy.txt  docker-compose.yml
backend/: API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  verify_setup.py
backend/app/: main.py
backend/app/agents/: __init__.py  analysis_agent.py  base_agent.py  kubectl_command_agent.py  monitoring_agent.py  remediation_agent.py
backend/app/api/v1/: endpoints.py  feedback_endpoints.py
backend/app/core/: config.py  logs_fetcher.py  mcp_client.py
backend/app/learning/: __init__.py  example_selector.py  feedback_store.py
backend/app/orchestration/: orchestrator.py
backend/app/utils/: StreamManager.py  messages.py  stream_manager.py
frontend/: Dockerfile  README.md  app.py  pyproject.toml
frontend/.streamlit/: config.toml
frontend/components/: feedback_panel.py  workflow_visualizer.py
frontend/services/: api_client.py
kubernetes-mcp-server/: README.md  package-lock.json  package.json  restart.sh  test-integration.sh
kubernetes-mcp-server/src/: approval-ui.html  index.js
