[tool.poetry]
name = "multi-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the multi-agent orchestration system."
authors = ["Avinash Rai <avinash.rai@example.com>"]
readme = "README.md"
package-mode = false

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
sse-starlette = "^3.0.2"
semantic-kernel = "^1.36.2"
elasticsearch = "^9.2.0"
google-generativeai = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"