[tool.poetry]
name = "multi-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the multi-agent orchestration system."
authors = ["Avinash Rai <avinash.rai@example.com>"]
readme = "README.md"
package-mode = false

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
sse-starlette = "^3.0.2"
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"
elasticsearch = "^9.2.0"
google-generativeai = "^0.8.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"